--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Etch-a-Sketch</title>
 </head>
 <body>
+  <button id="reset">Reset</button>
   <main id="container"></main>
   <script src="./js/app.js"></script>
 </body>
