--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>Etch-a-Sketch</title>
 </head>
 <body>
-  <button id="reset">Reset</button>
+  <div class="controls">
+    <label for="grid-size-input">Grid Length:</label>
+    <input type="number" id="grid-size-input" name="grid-size-input" placeholder="10">
+    <button id="submit">Submit</button>
+    <button id="reset">Reset</button>
+  </div>
   <main id="container"></main>
   <script src="./js/app.js"></script>
 </body>
