Add label to match dimensions
Add function generateWidthDisplay to represent the square display. I.e.
10 X 10 or 50 X 50. The first number from the input field is matched by
JavaScript and generated dynamically in HTML.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div class="controls">
-    <label for="grid-size-input">Grid Length:</label>
+    <label for="grid-size-input">Grid Dimensions:</label>
     <input type="number" id="grid-size-input" name="grid-size-input" placeholder="10">
+    <label class="width-dimension"></label>
     <button id="submit">Submit</button>
     <button id="reset">Reset</button>
   </div>
