--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./media/style.css">
   <title>Etch-a-Sketch</title>
+  
 </head>
-<body>
+<body>  
   <div class="controls">
     <label for="grid-size-input">Grid Dimensions:</label>
     <input type="number" id="grid-size-input" name="grid-size-input" placeholder="10">
@@ -15,6 +16,8 @@
     <button id="reset">Reset</button>
   </div>
   <main id="container"></main>
+  <div id="snow-container"></div>  
   <script src="./js/app.js"></script>
+  <script src="./js/snow.js"></script>
 </body>
 </html>
